incorrect alignment of checkboxes fixed

--- a/style.css
+++ b/style.css
@@ -75,12 +75,12 @@ form {
 }
 
 /* makes checkbox invisible */
-/* position relative 40px to prevent it from taking space */
+/* position absolute -15px to prevent it from taking space */
 input[type=checkbox],
 input[type=radio] {
     opacity: 0;
-    position: relative;
-    left: 40px;
+    position: absolute;
+    left: 0px;
 }
 
 /* visible part of the checkbox*/
